# closed-loop-C-P

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.json
data/: README.md
data/processed_1h/: aemo_nsw_solar_farm_metadata.csv  dataset_summary.json  feeder_branch.csv  feeder_bus.csv  price_timeseries.csv  solar_to_bus_mapping.csv  zone_to_bus_mapping.csv
scripts/: run_baseline_dispatch.py  run_closed_loop_gfcn.py  train_forecaster.py
src/fgmc_gfcn/: __init__.py  closed_loop.py  dispatch.py
