[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fgmc-gfcn"
version = "0.1.0"
description = "Fine-grained marginal-cost feedback and graph-flow correction network for distribution-feeder scheduling experiments."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "torch>=2.0",
  "pyomo>=6.7",
  "gurobipy>=10.0"
]

[tool.setuptools.packages.find]
where = ["src"]

